--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -126,7 +126,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=comercial.Comercial_pena
+main.class=comercial.Comercial
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
