--- a/reports/.gitignore
+++ b/reports/.gitignore
@@ -5,3 +5,4 @@
 /rpt_documento_venta_nota.jasper
 /rpt_documento_venta_nota_rodson.jasper
 /rpt_documento_venta.jasper
+/rpt_ver_ventas_sunat.jasper
