--- a/reports/.settings/org.eclipse.core.resources.prefs
+++ b/reports/.settings/org.eclipse.core.resources.prefs
@@ -10,3 +10,4 @@ encoding/rpt_documento_venta_rodson.jrxml=UTF-8
 encoding/rpt_productos_menor_cero.jrxml=UTF-8
 encoding/rpt_productos_valorizados_empresa.jrxml=UTF-8
 encoding/rpt_productos_valorizados_tienda.jrxml=UTF-8
+encoding/rpt_ver_ventas_sunat.jrxml=UTF-8
