se agrego los reportes ventas y compras en exel

--- a/reports/.gitignore
+++ b/reports/.gitignore
@@ -7,3 +7,5 @@
 /rpt_documento_venta.jasper
 /rpt_ver_ventas_sunat.jasper
 /rpt_documento_guia.jasper
+/registro_vetas.jasper
+/registro_compras.jasper
