ver ventas en excel

--- a/reports/.settings/org.eclipse.core.resources.prefs
+++ b/reports/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding/registro_vetas.jrxml=UTF-8
 encoding/report_traslado.jrxml=UTF-8
 encoding/rpt_detalle_ventas_tienda.jrxml=UTF-8
 encoding/rpt_documento_guia.jrxml=UTF-8
