--- a/reports/.settings/org.eclipse.core.resources.prefs
+++ b/reports/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,7 @@ encoding/rpt_documento_venta.jrxml=UTF-8
 encoding/rpt_documento_venta_nota.jrxml=UTF-8
 encoding/rpt_documento_venta_nota_rodson.jrxml=UTF-8
 encoding/rpt_documento_venta_rodson.jrxml=UTF-8
+encoding/rpt_kardex.jrxml=UTF-8
 encoding/rpt_productos_menor_cero.jrxml=UTF-8
 encoding/rpt_productos_valorizados_empresa.jrxml=UTF-8
 encoding/rpt_productos_valorizados_tienda.jrxml=UTF-8
