modificar ingreso de mercaderia

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,38 +31,43 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=libs/AbsoluteLayout.jar
 file.reference.AutoCompleter.jar=libs/AutoCompleter.jar
-file.reference.barbecue-1.5-beta1.jar=libs/barbecue-1.5-beta1.jar
-file.reference.barcode4j-2.1.jar=libs/barcode4j-2.1.jar
-file.reference.commons-beanutils-1.8.0.jar=libs/commons-beanutils-1.8.0.jar
-file.reference.commons-collections-3.2.1.jar=libs/commons-collections-3.2.1.jar
-file.reference.commons-digester-2.1.jar=libs/commons-digester-2.1.jar
-file.reference.commons-javaflow-20060411.jar=libs/commons-javaflow-20060411.jar
-file.reference.commons-logging-1.1.1.jar=libs/commons-logging-1.1.1.jar
-file.reference.commons-net-3.3-sources.jar=libs/commons-net-3.3-sources.jar
-file.reference.commons-net-3.3.jar=libs/commons-net-3.3.jar
-file.reference.commons-net-examples-3.3.jar=libs/commons-net-examples-3.3.jar
-file.reference.dsn.jar=libs/dsn.jar
-file.reference.gimap.jar=libs/gimap.jar
-file.reference.groovy-all-2.0.1.jar=libs/groovy-all-2.0.1.jar
-file.reference.imap.jar=libs/imap.jar
-file.reference.iText-2.1.7.js2.jar=libs/iText-2.1.7.js2.jar
-file.reference.jasperreports-5.6.0.jar=libs/jasperreports-5.6.0.jar
-file.reference.jasperreports-applet-5.6.0.jar=libs/jasperreports-applet-5.6.0.jar
-file.reference.jasperreports-fonts-5.6.0.jar=libs/jasperreports-fonts-5.6.0.jar
-file.reference.jasperreports-javaflow-5.6.0.jar=libs/jasperreports-javaflow-5.6.0.jar
-file.reference.jcommon-1.0.15.jar=libs/jcommon-1.0.15.jar
-file.reference.jdt-compiler-3.1.1.jar=libs/jdt-compiler-3.1.1.jar
-file.reference.jfreechart-1.0.12.jar=libs/jfreechart-1.0.12.jar
+file.reference.barbecue-1.5-beta1.jar=libs/JasperReport/barbecue-1.5-beta1.jar
+file.reference.barcode4j-2.1.jar=libs/JasperReport/barcode4j-2.1.jar
+file.reference.barcodes-7.1.3.jar=libs/itext/barcodes-7.1.3.jar
+file.reference.commons-beanutils-1.8.0.jar=libs/JasperReport/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=libs/JasperReport/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=libs/JasperReport/commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=libs/JasperReport/commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=libs/JasperReport/commons-logging-1.1.1.jar
+file.reference.font-asian-7.1.3.jar=libs/itext/font-asian-7.1.3.jar
+file.reference.forms-7.1.3.jar=libs/itext/forms-7.1.3.jar
+file.reference.groovy-all-2.1.3.jar=libs/JasperReport/groovy-all-2.1.3.jar
+file.reference.hyph-7.1.3.jar=libs/itext/hyph-7.1.3.jar
+file.reference.io-7.1.3.jar=libs/itext/io-7.1.3.jar
+file.reference.iText-2.1.7.js2.jar=libs/JasperReport/iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=libs/JasperReport/jasperreports-5.6.0.jar
+file.reference.jasperreports-applet-5.6.0.jar=libs/JasperReport/jasperreports-applet-5.6.0.jar
+file.reference.jasperreports-fonts-5.6.0.jar=libs/JasperReport/jasperreports-fonts-5.6.0.jar
+file.reference.jcommon-1.0.15.jar=libs/JasperReport/jcommon-1.0.15.jar
+file.reference.jfreechart-1.0.12.jar-1=libs/JasperReport/jfreechart-1.0.12.jar
 file.reference.json-simple-1.1.1.jar=libs/json-simple-1.1.1.jar
+file.reference.kernel-7.1.3.jar=libs/itext/kernel-7.1.3.jar
+file.reference.layout-7.1.3.jar=libs/itext/layout-7.1.3.jar
 file.reference.mail.jar=libs/mail.jar
 file.reference.mailapi.jar=libs/mailapi.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
 file.reference.NiconNotifyOSD_1.0.jar=libs/NiconNotifyOSD 1.0.jar
-file.reference.png-encoder-1.5.jar=libs/png-encoder-1.5.jar
-file.reference.poi-3.7-20101029.jar=libs/poi-3.7-20101029.jar
+file.reference.pdfa-7.1.3.jar=libs/itext/pdfa-7.1.3.jar
+file.reference.pdftest-7.1.3.jar=libs/itext/pdftest-7.1.3.jar
+file.reference.png-encoder-1.5.jar=libs/JasperReport/png-encoder-1.5.jar
+file.reference.poi-3.7-20101029.jar=libs/JasperReport/poi-3.7-20101029.jar
 file.reference.pop3.jar=libs/pop3.jar
+file.reference.sign-7.1.3.jar=libs/itext/sign-7.1.3.jar
 file.reference.smtp.jar=libs/smtp.jar
+file.reference.styled-xml-parser-7.1.3.jar=libs/itext/styled-xml-parser-7.1.3.jar
 file.reference.substance-4.3.jar=libs/substance-4.3.jar
+file.reference.svg-7.1.3.jar=libs/itext/svg-7.1.3.jar
+file.reference.tools.jar=libs/tools.jar
 file.reference.Util.jar=libs/Util.jar
 includes=**
 jar.compress=false
@@ -71,6 +76,25 @@ javac.classpath=\
     ${file.reference.AutoCompleter.jar}:\
     ${file.reference.NiconNotifyOSD_1.0.jar}:\
     ${file.reference.Util.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.pop3.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.substance-4.3.jar}:\
+    ${file.reference.barcodes-7.1.3.jar}:\
+    ${file.reference.font-asian-7.1.3.jar}:\
+    ${file.reference.forms-7.1.3.jar}:\
+    ${file.reference.hyph-7.1.3.jar}:\
+    ${file.reference.io-7.1.3.jar}:\
+    ${file.reference.kernel-7.1.3.jar}:\
+    ${file.reference.layout-7.1.3.jar}:\
+    ${file.reference.pdfa-7.1.3.jar}:\
+    ${file.reference.pdftest-7.1.3.jar}:\
+    ${file.reference.sign-7.1.3.jar}:\
+    ${file.reference.styled-xml-parser-7.1.3.jar}:\
+    ${file.reference.svg-7.1.3.jar}:\
     ${file.reference.barbecue-1.5-beta1.jar}:\
     ${file.reference.barcode4j-2.1.jar}:\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
@@ -78,30 +102,16 @@ javac.classpath=\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.commons-net-3.3-sources.jar}:\
-    ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.commons-net-examples-3.3.jar}:\
-    ${file.reference.dsn.jar}:\
-    ${file.reference.gimap.jar}:\
-    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.groovy-all-2.1.3.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.imap.jar}:\
     ${file.reference.jasperreports-5.6.0.jar}:\
     ${file.reference.jasperreports-applet-5.6.0.jar}:\
     ${file.reference.jasperreports-fonts-5.6.0.jar}:\
-    ${file.reference.jasperreports-javaflow-5.6.0.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
-    ${file.reference.jdt-compiler-3.1.1.jar}:\
-    ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.mailapi.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar-1}:\
     ${file.reference.png-encoder-1.5.jar}:\
     ${file.reference.poi-3.7-20101029.jar}:\
-    ${file.reference.pop3.jar}:\
-    ${file.reference.smtp.jar}:\
-    ${file.reference.substance-4.3.jar}
+    ${file.reference.tools.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
