--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=comercial
 application.vendor=DELACRUZ
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -41,6 +42,7 @@ file.reference.barcodes-7.1.3.jar=libs/itext/barcodes-7.1.3.jar
 file.reference.commons-beanutils-1.8.0.jar=libs/JasperReport/commons-beanutils-1.8.0.jar
 file.reference.commons-collections-3.2.1.jar=libs/JasperReport/commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=libs/JasperReport/commons-digester-2.1.jar
+file.reference.commons-io-2.11.0.jar=libs/commons-io-2.11.0.jar
 file.reference.commons-javaflow-20060411.jar=libs/JasperReport/commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=libs/JasperReport/commons-logging-1.1.1.jar
 file.reference.font-asian-7.1.3.jar=libs/itext/font-asian-7.1.3.jar
@@ -57,6 +59,8 @@ file.reference.jfreechart-1.0.12.jar-1=libs/JasperReport/jfreechart-1.0.12.jar
 file.reference.json-simple-1.1.1.jar=libs/json-simple-1.1.1.jar
 file.reference.kernel-7.1.3.jar=libs/itext/kernel-7.1.3.jar
 file.reference.layout-7.1.3.jar=libs/itext/layout-7.1.3.jar
+file.reference.log4j-api-2.17.2.jar=libs/apache poi/log4j-api-2.17.2.jar
+file.reference.log4j-core.jar=libs/apache poi/log4j-core.jar
 file.reference.mail.jar=libs/mail.jar
 file.reference.mailapi.jar=libs/mailapi.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
@@ -64,7 +68,8 @@ file.reference.NiconNotifyOSD_1.0.jar=libs/NiconNotifyOSD 1.0.jar
 file.reference.pdfa-7.1.3.jar=libs/itext/pdfa-7.1.3.jar
 file.reference.pdftest-7.1.3.jar=libs/itext/pdftest-7.1.3.jar
 file.reference.png-encoder-1.5.jar=libs/JasperReport/png-encoder-1.5.jar
-file.reference.poi-3.7-20101029.jar=libs/JasperReport/poi-3.7-20101029.jar
+file.reference.poi-5.2.2.jar=libs/poi-5.2.2.jar
+file.reference.poi-ooxml-5.2.2.jar=libs/poi-ooxml-5.2.2.jar
 file.reference.pop3.jar=libs/pop3.jar
 file.reference.sign-7.1.3.jar=libs/itext/sign-7.1.3.jar
 file.reference.smtp.jar=libs/smtp.jar
@@ -74,7 +79,9 @@ file.reference.svg-7.1.3.jar=libs/itext/svg-7.1.3.jar
 file.reference.tools.jar=libs/tools.jar
 file.reference.Util.jar=libs/Util.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.AutoCompleter.jar}:\
@@ -114,8 +121,12 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jfreechart-1.0.12.jar-1}:\
     ${file.reference.png-encoder-1.5.jar}:\
-    ${file.reference.poi-3.7-20101029.jar}:\
-    ${file.reference.tools.jar}
+    ${file.reference.tools.jar}:\
+    ${file.reference.poi-5.2.2.jar}:\
+    ${file.reference.poi-ooxml-5.2.2.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.log4j-api-2.17.2.jar}:\
+    ${file.reference.log4j-core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -136,6 +147,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -144,11 +156,31 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=comercial
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=comercial.Comercial
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=apache20
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
